# wordcounter

./: .env.example  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/count/: route.ts
