[package]
name = "wordcounter-backend"
version = "0.1.0"
edition = "2021"
description = "Instant word & char count"
authors = ["JJ-Dynamite"]
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
